Test Flux#log() method in exercise 3